[tool.poetry]
name = "project2-sidorov-artur-m25-555"
version = "0.1.0"
description = ""
authors = ["Arthur Sidorov"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)"
]
